# psychofauna

./: .gitignore  README.md  dataset.py  outrage_training_data.csv  pyproject.toml  train.py
chrome-extension/: README.md  background.js  content.js  manifest.json  offscreen.html  popup.html  popup.js  styles.css  worker.js
chrome-extension/libs/: transformers.min.js
chrome-extension/scripts/: fetch_hf_sst_model.sh
train/: dataset.py  onnx.py  train.py
